--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "matplotlib>=3.9.3",
     "pydantic>=2.10.2",
+    "seaborn>=0.13.2",
     "tabulate>=0.9.0",
     "torch>=2.5.1",
 ]
